12. Валидация параметров запуска [#246865] - fix